--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "hey",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --devtool evel --progress --colors --hot --content-base build"
+    "dev": "webpack-dev-server --devtool eval-source-map --progress --colors --hot --content-base build"
   },
   "author": "",
   "license": "ISC",
@@ -27,12 +27,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "classnames": "^2.2.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "google-map-react": "^0.11.2",
     "immutable": "^3.7.6",
+    "node-sass": "^3.4.2",
     "react": "^0.14.6",
     "react-controllables": "^0.6.0",
     "react-dom": "^0.14.6",
+    "sass-loader": "^3.2.0",
     "webpack-dev-server": "^1.14.0"
   }
 }
